# RTS_PROJECT

./: README.md  dashboard.html  setup.py  simulation_results_20260414_215431.csv  smart_traffic_dashboard.html
SMART_TRAFFIC_CONTROLLER_3D_PROTOTYPE/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
SMART_TRAFFIC_CONTROLLER_3D_PROTOTYPE/src/: App.jsx  index.css
SMART_TRAFFIC_CONTROLLER_3D_PROTOTYPE/src/components/: CPUBarChart.jsx  Car.jsx  ChartFrame.jsx  ControlBar.jsx  DashboardLayout.jsx  DecisionPanel.jsx  Header.jsx  KPICard.jsx  LatencyChart.jsx  LineChartPanel.jsx  PhaseTimeline.jsx  QueueCard.jsx  SafetyMonitor.jsx  Sidebar.jsx  SystemHealth.jsx  TrafficLight.jsx  TrafficSimulation.jsx
SMART_TRAFFIC_CONTROLLER_3D_PROTOTYPE/src/components/Charts/: CPUChart.jsx  JitterChart.jsx  LatencyChart.jsx  PhaseTimeline.jsx  ThroughputChart.jsx  VehiclesChart.jsx  WaitingTimeChart.jsx
SMART_TRAFFIC_CONTROLLER_3D_PROTOTYPE/src/components/Pages/: Alerts.jsx  Analytics.jsx  Devices.jsx  Overview.jsx  Reports.jsx  Settings.jsx  Signals.jsx  TrafficMonitor.jsx
SMART_TRAFFIC_CONTROLLER_3D_PROTOTYPE/src/hooks/: useTelemetry.js  useTrafficSimulation.js
SMART_TRAFFIC_CONTROLLER_3D_PROTOTYPE/src/utils/: exportUtils.js  safetyMonitor.js  trafficLogic.js
install/: local_setup.bat  local_setup.ps1  local_setup.sh  setup.sh
install/smart_traffic/share/smart_traffic/: package.bash  package.bat  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/smart_traffic/share/smart_traffic/launch/: traffic_launch.py
simulation/: ros2_bridge.py
smart_traffic/: sensor_node.py  smart_traffic_dashboard.html
test/: simulation.py  simulation_results_20260414_190727.csv
(+17 files in other folders)
